src/tests/test-src/errors/R9-readln-not-open.syntran
// R9: readln-not-open
// readln() was called on a file handle that isn't open

let f = open("build/rt_file_r9.txt", "w");
close(f);
let line = readln(f);
